[package]
name = "mastodon-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.8.1"
serde = "1.0.136"
tokio = { version = "1", features = ["macros"], default-features=false }
serde_json = "1.0.104"
megalodon = { path = './megalodon-rs' }
