[package]
name = "mastodon-status"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "rustls", "tokio-rustls"], default-features=false}
serde = "1.0.136"
tokio = { version = "1", features = ["macros"], default-features=false }
serde_json = "1.0.104"
megalodon = { path = './megalodon-rs' }
html2text = "0.12"
url = "2.5"
pagerduty-rs = { path = './pagerduty-rs' }
time = "0.3.37"
chrono = "0.4.41"
